[fix]: Consertando paginação
